# address-geocoder

./: .gitignore  README.md  config_example.yml  geocoder.py  pyproject.toml
mapping/: ais_properties_fields.py  zip_codes.csv
tests/: test_address_match.py  test_ais_lookup.py  test_db_lookup.py  test_geocoder.py  test_parser.py  test_tomtom_lookup.py
utils/: ais_lookup.py  db_lookup.py  parse_address.py  tomtom_lookup.py
